Fix letter spacing in the footer

--- a/style.css
+++ b/style.css
@@ -433,6 +433,8 @@ h2,
 	display: flex;
 	flex-direction: column;
 	gap: 0.5rem;
+
+	letter-spacing: 1px;
 }
 
 .footer__link {
